@@ -3,7 +3,6 @@ package ru.practicum.main.services.impl;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import ru.practicum.main.dto.user.UserDto;
 import ru.practicum.main.exceptions.NameAlreadyExistException;
@@ -12,6 +11,7 @@ import ru.practicum.main.repositories.UserRepository;
 import ru.practicum.main.services.UserService;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Slf4j
@@ -34,9 +34,16 @@ public class UserServiceImpl implements UserService {
     @Override
     public List<UserDto> getUsers(List<Long> ids, Integer from, Integer size) {
         log.debug("Received users");
-        Pageable page = PageRequest.of(from / size, size);
-        return !ids.isEmpty() ? userMapper.toUserDtoList(userRepository.findAllById(ids))
-                : userMapper.toUserDtoList(userRepository.findAll(page).toList());
+        PageRequest page = PageRequest.of(from, size);
+        if (ids == null) {
+            return userRepository.findAll(page).stream()
+                    .map(userMapper::toUserDto)
+                    .collect(Collectors.toList());
+        } else {
+            return userRepository.findAllById(ids).stream()
+                    .map(userMapper::toUserDto)
+                    .collect(Collectors.toList());
+        }
     }
 
     @Override
